Revert "fix(FEC-12539): Shaka text displayer font size too small on TVs (#208)"
This reverts commit f224a1e27b7e0ebca79ab7e539538eaa3b0b04d9.

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -35,3 +35,9 @@
 :-ms-fullscreen .shaka-text-container {
   font-size: 4.4vmin;
 }
+
+@media screen and (min-width: 1240px) {
+  .shaka-text-container {
+    font-size: 4.4vmin;
+  }
+}
